# codex-widget

./: .gitignore  README.md  codex-widget.desktop  pyproject.toml
scripts/: codex_usage_widget.py
src/codex_widget/: __init__.py  main.py  usage.py  view_model.py  widget.py
